# sweetroll

./: .editorconfig  .ghci  .gitignore  .gitmodules  .mailmap  .tmuxp.yaml  .travis.yml  COPYING  Makefile  README.md  bower.json  haskeleton.hs  nginx.conf  stack.yaml  style.css  sweetroll-site.nginx.conf  sweetroll.cabal  update-icons.js
benchmark/: Bench.hs  SweetrollBench.hs
benchmark/Sweetroll/: UtilBench.hs
conf/: sweetroll.json
docs/: conf.py  datatypes.rst  deployment.rst  index.rst
example-feeds/: articles.json  gamelogs.json  index.json  notes.json  photos.json  replies.json  reviews.json  tag.json
example-plugins/: pushover.js
executable/: DevMain.hs  Main.hs
sweetroll-be/: .ghci  .gitignore  README.md  package.json  package.yaml  stack.yaml  sweetroll.cabal
sweetroll-be/executable/: DevMain.hs  DevelMain.hs  Main.hs
sweetroll-fe/: .eslintrc.json  .gitignore  .stylelintrc.json  Brocfile.js  README.md  bower.json  index.js  index.mjs  package-lock.json  package.json
sweetroll-fe/assets/: color.css  offline.js  site.js  style.css  sw.js
sweetroll-fe/lib/: app.js  helpers.js
sweetroll-fe/src/: app.mjs  helpers.mjs
sweetroll-fe/views/: 401.pug  403.pug  404.pug  410.pug  429.pug  500.pug  502.pug  503.pug  504.pug  _entry.pug  _globals.pug  _icons.pug  _layout.pug  _media.pug  entry.pug  feed.pug  indieconfig.pug  layout.pug  offline.pug  search.pug  unknown.pug
sweetroll-mu/: .gitignore  README.md  buildlambda.sh  buildspec.yml  index.js  lambda.js  package-lock.json  package.json
sweetroll-mu/lib/: proc.js
sweetroll-node-common/: index.js  package-lock.json
templates/: 404.ejs  410.ejs  author.ejs  author.html  category.ejs  category.html  citeAuthors.ejs  citeContent.ejs  default-style.css  entry-in-list.html  entry.ejs  entry.html  entryActions.ejs  entryCiteLikes.ejs  entryCiteReplies.ejs  entryCiteReposts.ejs  entryComments.ejs  entryInList.ejs  footer.ejs  head.ejs  head_stylesheets.ejs  header.ejs  index.ejs  index.html  indexCategory.ejs  indexSlice.ejs  layout.html  page.html  prelude.js  showAuthors.ejs  showAvatar.ejs  showContent.ejs  showCount.ejs  showEntry.ejs  showFacepile.ejs  showFacepileAvatar.ejs  showRefContext.ejs  siteMeta.ejs
test-suite/: SweetrollSpec.hs  TestUtil.hs
test-suite/Sweetroll/: ApiSpec.hs  AppSpec.hs  PagesSpec.hs  RenderingSpec.hs  TypesSpec.hs  UtilSpec.hs
test-suite/Sweetroll/Webmention/: ReceiveSpec.hs
