name:            sweetroll
version:         0.0.0
synopsis:        A micro+blogging (IndieWeb) engine with curved swords. Curved! Swords!
--description: TODO
category:        Web
homepage:        https://github.com/myfreeweb/sweetroll
author:          Greg V
copyright:       2014-2017 Greg V <greg@unrelenting.technology>
maintainer:      greg@unrelenting.technology
license:         PublicDomain
license-file:    UNLICENSE
build-type:      Simple
cabal-version:   >= 1.10
extra-source-files:
    README.md
tested-with:
    GHC == 8.0.1

source-repository head
    type: git
    location: git://github.com/myfreeweb/sweetroll.git

library
    build-depends:
        base >= 4.8.0.0 && < 5
      , classy-prelude
      , mono-traversable
      , split
      , transformers
      , transformers-base
      , mtl
      , monad-control
      , resourcet
      , resource-pool
      , lifted-base
      , containers
      , unordered-containers
      , vector
      , either
      , lens
      , safe
      , cryptonite
      , memory
      , process
      , errors
      , directory
      , data-default
      , string-conversions
      , bytestring-conversion
      , case-insensitive
      , text
      , bytestring
      , blaze-markup
      , blaze-builder
      , blaze-html
      , time
      , pcre-heavy
      , attoparsec
      , aeson
      , lens-aeson
      , aeson-qq
      , jwt
      , gitson
      , microformats2-parser
      , indieweb-algorithms
      , wai
      , wai-extra
      , wai-app-static
      , wai-cors
      , wai-middleware-throttle
      , wai-conduit
      , servant
      , servant-server
      , network-uri
      , network
      , conduit
      , conduit-combinators
      , http-types
      , http-media
      , http-client
      , http-client-tls
      , http-conduit
      , http-link-header
      , http-date
      , http-api-data
      , mime-types
      , html-conduit
      , xml-conduit
      , xml-conduit-writer
      , xml-lens
      , async
      , cmark
      , cmark-highlight
      , highlighting-kate
      , raw-strings-qq
      , file-embed
      , filepath
      , hs-duktape
    default-language: Haskell2010
    exposed-modules:
        Sweetroll.Api
        Sweetroll.Auth
        Sweetroll.Conf
        Sweetroll.Events
        Sweetroll.HTTPClient
        Sweetroll.Micropub.Endpoint
        Sweetroll.Micropub.Request
        Sweetroll.Micropub.Response
        Sweetroll.Monads
        Sweetroll.Prelude
        Sweetroll.Proxy
        Sweetroll.Routes
        Sweetroll.Webmention.Send
        Sweetroll.Webmention.Receive
    ghc-options: -Wall
    hs-source-dirs: library

flag tls
    description: Include warp-tls
    default: False

executable sweetroll
    build-depends:
        base >= 4.8.0.0 && < 5
      , git-embed
      , cabal-file-th
      , options
      , warp
      , socket-activation
      , stm
      , unix
      , network
      , streaming-commons
      , wai-extra
      , ansi-terminal
      , directory
      , cryptonite
      , memory
      , text
      , bytestring
      , foreign-store
      , gitson
      , sweetroll
    default-language: Haskell2010
    ghc-options: -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N -qa -qm"
    ld-options: -pthread
    hs-source-dirs: executable
    main-is: Main.hs
    if flag(tls)
        build-depends: warp-tls
        cpp-options: -DSweetrollTLS

-- test-suite examples
--     build-depends:
--         base >= 4.8.0.0 && < 5
--       , Glob
--       , doctest
--     default-language: Haskell2010
--     hs-source-dirs: test-suite
--     main-is: DocTest.hs
--     type: exitcode-stdio-1.0

test-suite tests
    build-depends:
        base >= 4.8.0.0 && < 5
      , classy-prelude
      , transformers
      , string-conversions
      , errors
      , conduit-combinators
      , http-types
      , network-uri
      , case-insensitive
      , wai
      , wai-extra
      , warp
      , directory
      , gitson
      , bytestring
      , raw-strings-qq
      , lens
      , aeson
      , lens-aeson
      , aeson-qq
      , data-default
      , process
      , hspec
      , sweetroll
    default-language: Haskell2010
    ghc-options: -threaded -Wall
    hs-source-dirs: test-suite
    main-is: Spec.hs
    other-modules:
        Sweetroll.ApiSpec
        Sweetroll.Webmention.ReceiveSpec
        TestUtil
    type: exitcode-stdio-1.0
