name:            sweetroll
version:         0.0.0
synopsis:        A micro+blogging (IndieWeb) engine with curved swords. Curved! Swords!
--description: TODO
category:        Web
homepage:        https://github.com/myfreeweb/sweetroll
author:          Greg V
copyright:       2014-2017 Greg V <greg@unrelenting.technology>
maintainer:      greg@unrelenting.technology
license:         PublicDomain
license-file:    UNLICENSE
build-type:      Simple
cabal-version:   >= 1.10
extra-source-files:
    README.md
tested-with:
    GHC == 8.0.1

source-repository head
    type: git
    location: git://github.com/myfreeweb/sweetroll.git

library
    build-depends:
        base >= 4.8.0.0 && < 5
      , classy-prelude
      , mono-traversable
      , split
      , transformers
      , transformers-base
      , mtl
      , monad-control
      , resourcet
      , lifted-base
      , containers
      , unordered-containers
      , vector
      , either
      , lens
      , safe
      , cryptonite
      , memory
      , process
      , errors
      , directory
      , data-default
      , data-has
      , string-conversions
      , bytestring-conversion
      , case-insensitive
      , text
      , bytestring
      , blaze-markup
      , blaze-builder
      , blaze-html
      , time
      , envy
      , pcre-heavy
      , attoparsec
      , aeson
      , lens-aeson
      , aeson-qq
      , jwt
      , gitson
      , hasql
      , hasql-pool
      , microformats2-parser
      , indieweb-algorithms
      , wai
      , wai-extra
      , wai-cors
      , wai-conduit
      , servant
      , servant-server
      , network-uri
      , network
      , conduit
      , conduit-combinators
      , http-types
      , http-media
      , http-client
      , http-client-tls
      , http-conduit
      , http-link-header
      , http-date
      , http-api-data
      , mime-types
      , html-conduit
      , xml-conduit
      , xml-conduit-writer
      , xml-lens
      , async
      , cmark
      , cmark-highlight
      , highlighting-kate
      , raw-strings-qq
      , filepath
    default-language: Haskell2010
    exposed-modules:
        Sweetroll.Api
        Sweetroll.Auth
        Sweetroll.Conf
        Sweetroll.Database
        Sweetroll.Events
        Sweetroll.HTTPClient
        Sweetroll.Micropub.Endpoint
        Sweetroll.Micropub.Request
        Sweetroll.Micropub.Response
        Sweetroll.Monads
        Sweetroll.Prelude
        Sweetroll.Routes
        Sweetroll.Webmention.Send
        Sweetroll.Webmention.Receive
    ghc-options: -Wall
    hs-source-dirs: library

executable sweetroll
    build-depends:
        base >= 4.8.0.0 && < 5
      , options
      , wai-cli
      , stm
      , network
      , streaming-commons
      , wai-extra
      , directory
      , cryptonite
      , memory
      , text
      , bytestring
      , foreign-store
      , gitson
      , data-default
      , envy
      , sweetroll
    default-language: Haskell2010
    ghc-options: -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N -qa -qm"
    ld-options: -pthread
    hs-source-dirs: executable
    main-is: Main.hs

-- test-suite examples
--     build-depends:
--         base >= 4.8.0.0 && < 5
--       , Glob
--       , doctest
--     default-language: Haskell2010
--     hs-source-dirs: test-suite
--     main-is: DocTest.hs
--     type: exitcode-stdio-1.0
